# openpaws

./: README.md
3D_model/: 10FrontThigh4.STL  11FrontThighCover4.STL  12Shoulder2.STL  13SidePanel2.STL  14TopSidePanel1.STL  15BottomSidePanel1.STL  16BackFrame1.STL  17MiddleFrame1.STL  18FrontFrame1.STL  1Wheel4.STL  20Paw4.STL  21PiFrame.STL  22MPU1.STL  2WheelGuard8.STL  3KneeWheel4.STL  4KneePivot4.STL  5LowerLeg4.STL  6ConnectorPlate4.STL  7ShoulderConnector4.STL  8ThighCableClamp4.STL  9ThighRoot4.STL
software/ROS1/: .gitignore
software/ROS1/src/openpaws/: CMakeLists.txt  package.xml
software/ROS1/src/openpaws_base/: CMakeLists.txt  package.xml
software/ROS1/src/openpaws_base/include/: message_relay.h  quadruped_controller.h  state_estimation.h
software/ROS1/src/openpaws_base/src/: message_relay.cpp  quadruped_controller.cpp  quadruped_controller_node.cpp  state_estimation.cpp
software/ROS1/src/openpaws_bringup/: CMakeLists.txt  package.xml
software/ROS1/src/openpaws_bringup/launch/: bringup.launch  joints_gui.launch
software/ROS1/src/openpaws_bringup/launch/include/: velocity_smoother.launch
software/ROS1/src/openpaws_bringup/scripts/: joint_calibrator_relay.py
software/ROS1/src/openpaws_config/: CMakeLists.txt  README.md  config.json  package.xml
software/ROS1/src/openpaws_config/config/ros_control/: ros_control.yaml
software/ROS1/src/openpaws_config/include/: quadruped_description.h
software/ROS1/src/openpaws_config/launch/: bringup.launch  display_half_squat.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
software/ROS1/src/openpaws_config/launch/include/: move_base.launch
software/ROS1/src/openpaws_description/: CMakeLists.txt  package.xml
software/ROS1/src/openpaws_description/config/: joint_names_description.yaml
software/ROS1/src/openpaws_description/launch/: description.launch  display.launch  gazebo.launch  view_urdf.launch
software/ROS1/src/openpaws_description/meshes/: lf_hip_link.STL  lf_lower_leg_link.STL  lf_upper_leg_link.STL  lh_hip_link.STL  lh_lower_leg_link.STL  lh_upper_leg_link.STL  rf_hip_link.STL  rf_lower_leg_link.STL  rf_upper_leg_link.STL  rh_hip_link.STL  rh_lower_leg_link.STL  rh_upper_leg_link.STL
software/ROS1/src/openpaws_description/urdf/: description.csv  intertia  openpaws.urdf
software/ROS1/src/openpaws_gazebo/: CMakeLists.txt  package.xml
software/ROS1/src/openpaws_gazebo/launch/: gazebo.launch  spawn_robot.launch  spawn_world.launch
software/ROS1/src/openpaws_gazebo/scripts/: imu_sensor.py  odometry.py  odometry_tf.py
software/ROS1/src/openpaws_gazebo/src/: contact_sensor.cpp
software/ROS1/src/openpaws_msgs/: CMakeLists.txt  package.xml
software/ROS1/src/openpaws_msgs/msg/: PointArray.msg
software/ROS1/src/openpaws_navigation/: CMakeLists.txt  package.xml
software/ROS1/src/openpaws_navigation/launch/: navigate.launch  octo_slam.launch
software/ROS1/src/openpaws_navigation/launch/navigation/: move_base.launch
software/ROS1/src/openpaws_navigation/launch/slam/: octomap.launch
software/ROS1/src/openpaws_teleop/: CMakeLists.txt  openpaws_teleop.py  package.xml
software/ROS1/src/openpaws_teleop/launch/: teleop.launch
software/ROS1/src/yocs_velocity_smoother/: README.md
