<?xml version="1.0"?>
<package format="2">
  <name>openpaws</name>
  <version>0.1.0</version>
  <description>OPENPAWS Core Library</description>

  <maintainer email="xxx@xxx.com">xxx</maintainer>
  <author>xxx</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
