<?xml version="1.0"?>
<package format="2">
  <name>openpaws_gazebo</name>
  <version>0.1.0</version>
  <description>OPENPAWS Gazebo Package</description>

  <maintainer email="xxx@xxx.com">xxx</maintainer>
  <author>xxx</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>openpaws</depend>
  <depend>openpaws_msgs</depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
</package>
